--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,3 +10,12 @@ button{
     justify-content: center;
     align-items: center;
 }
+
+
+.content {
+    border: 2px solid red;
+    padding: 20px;
+    position: absolute;
+    margin-top: 10px;
+    font-style: italic;
+}
